@startuml
'https://plantuml.com/class-diagram

Sensor_Value --|> Sensor : extends >
SUNRISE407 ..|> Sensor_Value : implements >
SUNRISE407 ..|> AggregateRoot : implements >
SUNRISE407Value ..|> ValueObject : implements >
SUNRISE407Value ..|> Value : implements >
SUNRISE407 -- SUNRISE407Value : uses >
SUNRISE407 -- SensorID : uses >
SUNRISE407 -- SensorModelID : uses >
SUNRISE407 -- DeviceID : knows >
SensorID ..|> ValueObject : implements >
SensorModelID ..|> ValueObject : implements >
DeviceID ..|> ValueObject : implements >
SensorID ..|> DomainID : implements >
SensorModelID ..|> DomainID : implements >
DeviceID ..|> DomainID : implements >



interface ValueObject{
}

interface Sensor{
}

interface Sensor_Value{
+ getValue()
}

interface AggregateRoot{
}

interface Value{
}

interface DomainID{
}

class SUNRISE407{
- _sensorValue: SUNRISE407Value
- _deviceID: DeviceID
- _sensorModelID: SensorModelID
- _sensorID: SensorID
- _sensorData: Map <LocalTime, Double>

+ SUNRISE407(device id: Device id, sensorModelID: SensorModelID, sensorID:SensorId): SUNRISE407
- areConstructorArgumentsValid (sensorID: SensorID, deviceID: DeviceID, sensorModelID: SensorModelID): boolean
- setData(): Map <Integer, Double>
+ setValue(): void
+ identity(): SensorID
+ getValue (): Value
+ sameAs (object : Object): boolean
+ equals (object : Object): boolean
+ getDeviceID: DeviceID
+ getSensorModelID: SensorModelID
}


class SUNRISE407Value {

- powerConsumptionValue: Double
+ SUNRISE407Value (value): SUNRISE407Value
+ toString(): String
}

class DeviceID {
- _ID: String
+ DeviceID(stringID): DeviceID
+ equals(object : Object): boolean
+ hashCode(): int
+ toString(): String
}

class SensorID {
- _ID: String
+ SensorID(stringID): SensorID
+ equals(object : Object): boolean
+ toString(): String
}

class SensorModelID {
- _ID: String
+ SensorModelID(stringID): SensorModelID
+ equals(object : Object): boolean
+ toString(): String
}
@enduml